[gd_scene load_steps=6 format=3 uid="uid://bwc55n76ow5e2"]

[ext_resource type="Script" path="res://scenes/shop.gd" id="1_nvsuh"]
[ext_resource type="Texture2D" uid="uid://csjo0xfxc0wx3" path="res://assets/sewer_bedroom/food/apple.png" id="2_3rcgb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xe46w"]
bg_color = Color(0.898039, 0.768627, 0.976471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3pbp"]
bg_color = Color(0.823529, 0.917647, 0.419608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogy0y"]
bg_color = Color(0.698039, 0.223529, 0.4, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.823529, 0.917647, 0.419608, 1)

[node name="Shop" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nvsuh")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -224.0
offset_right = 384.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Close" type="Button" parent="."]
offset_left = 880.0
offset_top = 128.0
offset_right = 930.0
offset_bottom = 159.0
text = "Close"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(576, 248)
scale = Vector2(5, 5)
texture = ExtResource("2_3rcgb")

[node name="Name" type="Label" parent="Control"]
layout_mode = 0
offset_left = 384.0
offset_top = 128.0
offset_right = 768.0
offset_bottom = 173.0
theme_override_font_sizes/font_size = 32
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Description" type="Label" parent="Control"]
layout_mode = 0
offset_left = 320.0
offset_top = 312.0
offset_right = 832.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 24
text = "Item Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="next" type="Button" parent="Control"]
layout_mode = 0
offset_left = 680.0
offset_top = 224.0
offset_right = 706.0
offset_bottom = 277.0
theme_override_font_sizes/font_size = 32
text = ">"

[node name="previous" type="Button" parent="Control"]
layout_mode = 0
offset_left = 448.0
offset_top = 224.0
offset_right = 474.0
offset_bottom = 277.0
theme_override_font_sizes/font_size = 32
text = "<"

[node name="buy" type="Button" parent="Control"]
layout_mode = 0
offset_left = 512.0
offset_top = 456.0
offset_right = 640.0
offset_bottom = 488.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_xe46w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x3pbp")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogy0y")
text = "Buy"

[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Control/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Control/previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Control/buy" to="." method="_on_buy_pressed"]
